--- a/Views/Publicacion/Index.cshtml
+++ b/Views/Publicacion/Index.cshtml
@@ -51,7 +51,7 @@
             }
             else
             {
-                <p style="color:white" class="text-muted text-center">No hay imágenes asociadas a esta publicación.</p>
+                <p class=" pt-5 fs-3 text-center">No hay imágenes asociadas a esta publicación.</p>
             }
         </div>
 
@@ -78,9 +78,6 @@
                 </div>
             }
         </div>
-
-        
-
     </div>
 
     <!-- Modal: Editar Publicación -->
