--- a/Views/Creador/Index.cshtml
+++ b/Views/Creador/Index.cshtml
@@ -55,7 +55,9 @@
                                 <div class="membresias-price">Precio: $@nivel.Precio</div>
                                 @if (!Model.EsPropietario)
                                 {
-                                    <button class="membresias-button-suscribe mb-3">Suscribirse</button>
+                                    <form asp-action="Suscribirse" asp-controller="Creador" asp-route-idNivelSuscripcion="@nivel.Id" method="post">
+                                        <button type="submit" class="membresias-button-suscribe mb-3">Suscribirse</button>
+                                    </form>
                                 }
                                 else
                                 {
@@ -212,6 +214,16 @@
                                 <label for="Archivos" class="control-label">Archivos</label>
                                 <input type="file" name="archivos" id="Archivos" class="form-control-file" multiple />
                                 <span for="archivos" class="text-danger"></span>
+                            </div>
+                            <div class="form-group">
+                                <label for="idNivelSuscripcion" class="control-label">Nivel de Suscripción</label>
+                                <select name="idNivelSuscripcion" id="idNivelSuscripcion" class="form-select" required>
+                                    <option value="">Para todo el publico</option>
+                                    @foreach (var nivel in Model.Niveles)
+                                    {
+                                        <option value="@nivel.Id">@nivel.Nombre</option>
+                                    }
+                                </select>
                             </div>
                             <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cerrar</button>
                             <button type="submit" form="crearPublicacionForm" class="btn btn-primary">Crear</button>
