--- a/Views/Usuario/Index.cshtml
+++ b/Views/Usuario/Index.cshtml
@@ -42,7 +42,7 @@
                         @if (Model.Facturas != null && Model.Facturas.Count > 0)
                         {
                             <ul class="list-group">
-                                @foreach (var factura in Model.Usuario.Facturas)
+                                @foreach (var factura in Model.Facturas)
                                 {
                                     <li class="list-group-item">
                                         <i class="fas fa-file-invoice-dollar text-success"></i> @factura
